--- a/Project3_Graph.xcodeproj/xcshareddata/xcschemes/Project3_Graph.xcscheme
+++ b/Project3_Graph.xcodeproj/xcshareddata/xcschemes/Project3_Graph.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "test.txt"
+            argument = "testtest.txt"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
