Last Submitted Version

--- a/Project3_Graph.xcodeproj/xcshareddata/xcschemes/Project3_Graph.xcscheme
+++ b/Project3_Graph.xcodeproj/xcshareddata/xcschemes/Project3_Graph.xcscheme
@@ -52,7 +52,15 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "testtest.txt"
+            argument = "g.txt"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "gg.txt"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "test.txt"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
